--- a/myvenv/pyvenv.cfg
+++ b/myvenv/pyvenv.cfg
@@ -2,5 +2,5 @@ home = C:\Users\ASUS\AppData\Local\Microsoft\WindowsApps\PythonSoftwareFoundatio
 implementation = CPython
 version_info = 3.10.9.final.0
 virtualenv = 20.17.1
-include-system-site-packages = false
+include-system-site-packages = true
 version = 3.10.9
