--- a/.env
+++ b/.env
@@ -1,7 +1,5 @@
 secret_key =magodeoz100
 PGSQL =localhost
 PG_user =postgres
-pasword =magodeoz100
+pasword =alejandro.2001
 database_name =foutos
-
-
